--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,5 @@
 [build]
 command = "CI=false npm run build"
-functions = "/.netlify/functions"
+# functions = "/.netlify/functions"
+functions = "lambda"
 publish = "build"
